# pba-grader

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
fixtures/: make_sample.py
keys/: key_D.md  key_E.md  rubric.yaml
src/pba_grader/: __init__.py  cli.py  detect.py  grade.py  groq_client.py  ingest.py  llm_client.py  pipeline.py  plagiarism.py  report.py  schema.py  segment.py  vision.py
