[project]
name = "pba-grader"
version = "0.1.0"
description = "Penilaian otomatis jawaban UTS AI dalam Pendidikan Bahasa Arab berbasis LLM-as-judge (Groq)."
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11.4",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.13",
    "pillow>=10.4.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.0",
    "groq>=0.11.0",
    "openai>=1.40.0",
    "openpyxl>=3.1.5",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.1.0",
    "reportlab>=4.2.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.6.0",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pba_grader"]

[project.scripts]
pba-grader = "pba_grader.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"
